--- a/index.html
+++ b/index.html
@@ -3,14 +3,71 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=search" />
+  <link rel="stylesheet" href="styles/style.css">
     <title>AfroTune</title>
 </head>
     <!-- Home -->
-     <!-- About -->
-      <!-- Sign Up -->
-       <!-- Login -->
-      <!-- Edit Profile -->
-       <!-- Sign out -->
-       <
+     <section class="Home">
+        <header>
+            <img src="#" alt="logo" class="logo">
+            <form action="#"> 
+                <div class="search">
+                 <span class="search-icon material-symbols-outlined">search</span>
+                 <input class="search-input" type="search" placeholder="Search">
+                </div>
+            </form>
+            <ul>
+                <li><img src="src/images/icons/about.svg" alt=""><a href="">About</a></li>
+                <li><img src="src/images/icons/settings.svg" alt=""><a href="">Settings</a></li>
+                <li><a href="">Sign In</a></li>
+                <li><a href="">Sign Up</a></li>
+            </ul>
+
+        </header>
+        <main>
+  <div class="card-container">
+    <div class="card"><img src="src/images/Screenshot 2025-01-03 at 8.58.28 AM.png" alt="">
+    <div class="card-content"><h3>tizita</h3>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consectetur est beatae eum, sed labore quia quasi iste accusantium ex recusandae dolor, accusamus, nemo ipsam autem! Explicabo quia quam corrupti enim.</p>
+<a href="" class="btn">Play</a></div></div>
+</div>
+<div class="card-container">
+    <div class="card"><img src="src/images/Screenshot 2025-01-03 at 8.58.28 AM.png" alt="">
+    <div class="card-content"><h3>tizita</h3>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consectetur est beatae eum, sed labore quia quasi iste accusantium ex recusandae dolor, accusamus, nemo ipsam autem! Explicabo quia quam corrupti enim.</p>
+<a href="" class="btn">Play</a></div></div>
+</div>
+<div class="card-container">
+    <div class="card"><img src="src/images/Screenshot 2025-01-03 at 8.58.28 AM.png" alt="">
+    <div class="card-content"><h3>tizita</h3>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consectetur est beatae eum, sed labore quia quasi iste accusantium ex recusandae dolor, accusamus, nemo ipsam autem! Explicabo quia quam corrupti enim.</p>
+<a href="" class="btn">Play</a></div></div>
+</div>
+<div class="card-container">
+    <div class="card"><img src="src/images/Screenshot 2025-01-03 at 8.58.28 AM.png" alt="">
+    <div class="card-content"><h3>tizita</h3>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consectetur est beatae eum, sed labore quia quasi iste accusantium ex recusandae dolor, accusamus, nemo ipsam autem! Explicabo quia quam corrupti enim.</p>
+<a href="" class="btn">Play</a></div></div>
+</div>
+<div class="card-container">
+    <div class="card"><img src="src/images/Screenshot 2025-01-03 at 8.58.28 AM.png" alt="">
+    <div class="card-content"><h3>tizita</h3>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consectetur est beatae eum, sed labore quia quasi iste accusantium ex recusandae dolor, accusamus, nemo ipsam autem! Explicabo quia quam corrupti enim.</p>
+<a href="" class="btn">Play</a></div></div>
+</div>
+ </main>
+<footer>
+<p>&copy;2025 Ethiopian Music Player. All rights reserved </p>
+<div class="footer">
+    <img src="src/images/icons/linkedin.svg" alt="">
+    <img src="src/images/icons/instagram.svg" alt="">
+    <img src="src/images/icons/telegram.svg" alt="">
+</div>
+
+</footer>
+     </section>
+    
+       
 </body>
 </html>
